Add english message for error 502

--- a/public/502.html
+++ b/public/502.html
@@ -60,10 +60,16 @@
       <section id="body">
         <div>
           <p>
-            SkyHopper の起動には少し時間がかかります。<br>
+            SkyHopper<br>
             起動時にエラーが表示されてバグかな？と思った場合は少し待ってみてください。<br>
             また、状況が改善されない場合には
             <a href="https://skyhopper.org" target="_blank">https://skyhopper.org</a> で有益な情報が得られるかもしれません。
+          </p>
+          <p>
+            The skyhopper server encountered a temporary error and could not process your request<br>
+            Please try again in a few minutes. <br>
+            If the situation is still occurs, Please check the documentation
+            <a href="https://skyhopper.org/en" target="_blank">https://skyhopper.org/en</a>  for more imformation.
           </p>
         </div>
       </section>
