--- a/public/502.html
+++ b/public/502.html
@@ -60,7 +60,7 @@
       <section id="body">
         <div>
           <p>
-            SkyHopper<br>
+            SkyHopper の起動には少し時間がかかります。<br>
             起動時にエラーが表示されてバグかな？と思った場合は少し待ってみてください。<br>
             また、状況が改善されない場合には
             <a href="https://skyhopper.org" target="_blank">https://skyhopper.org</a> で有益な情報が得られるかもしれません。
